# symbolic-GED

./: .cursorignore  .gitignore  PRESENTATION.md  README.md  playground.ipynb  pyproject.toml  requirements.txt  run.sh  run_train.sh
evaluation/: predict_pde.py  st_pde.py
model/: config_tr_helpers.py  config_train.yaml  data_module.py  decoder.py  decoder_pde.py  encoder.py  encoder_pde.py  model.py  model_pde.py  run-temp.sh  train.py  train_original.py  utils.py
src/: CHECK_EVALUATION_STATUS.sh  DATASET_PIPELINE.md  EVAL_TRACKING.txt  EVAL_VERDICT.txt  README.md  README_EVALUATION.md  REPRODUCIBILITY.md  TELEGRAPHER_BRIDGE_README.md  __init__.py  analyze_operator_diversity.py  check_seq_acc.sh  classify_pdes.py  config.yaml  config_train_grammar.yaml  config_train_token.yaml  config_vae.yaml  create_visualizations.py  evaluation_results.json  monitor_training.sh  pde_string_utils.py  pytest.ini  run_canonical_pipeline.py  slurm_vae_s1_beta0.001.sh  slurm_vae_s2_beta0.01.sh  slurm_vae_s3_beta0.1.sh  slurm_vae_s4_beta0.5.sh  submit_annealed_training.sh  submit_clean_training.sh  submit_retrain_beta1e4.sh  submit_tokenization_eval.sh  submit_tokenization_eval_beta1e-2.sh  submit_tokenization_eval_beta2e-4.sh  submit_vae_annealing.sh  submit_vae_scenarios.sh  telegrapher_bridge.csv
src/analysis/: __init__.py  clustering.py  interpolation_analysis.py  pde_classifier.py  perturbation_analysis.py  physics.py  reconstruction_quality.py  report_generator.py  run_clustering_metrics.py  utils_pde.py
utils/: config.py  config.yaml  data_module.py  util.py  util_pde.py
(+116 files in other folders)
